--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Marcus Crane <marcus@utf9k.net>",
   "license": "MIT",
   "scripts": {
-    "start": "COMMIT_SHA=DEV overmind s",
+    "start": "COMMIT_SHA=main overmind s",
     "dev": "hugo server --disableFastRender",
     "dev:css": "NODE_ENV=development ./node_modules/tailwindcss/lib/cli.js -i ./assets/css/tailwind.css -o ./assets/css/style.css --jit -w",
     "build": "yarn run gather-files && yarn run build:css && COMMIT_SHA=$(git rev-parse --short HEAD) NODE_ENV=production hugo --gc",
