Added progress for The Science of Cooking

--- a/data/books.yml
+++ b/data/books.yml
@@ -20,6 +20,15 @@
     rating: N/A
     progress: 24
     
+  - title: The Science of Cooking
+    subtitle: Every Question Answered to Perfect your Cooking
+    author: Stuart Farrimond
+    cover: https://covers.openlibrary.org/b/id/11976269-L.jpg
+    link: https://openlibrary.org/works/OL19723027W/The_Science_of_Cooking
+    date_finished: N/A
+    rating: N/A
+    progress: 14
+    
   - title: Crossing the Chasm, 3rd Edition
     subtitle: Marketing and Selling Disruptive Products to Mainstream Customers
     author: Geoffrey A. Moore
