Fix up requests

--- a/data/metaoia.yml
+++ b/data/metaoia.yml
@@ -251,14 +251,12 @@ entries:
 
   - ID: 50
     RequestDate: 2020 - 2021
-    Subject: Request relating to foreign interference in the 2020 New Zealand
-General Election
+    Subject: Request relating to foreign interference in the 2020 New Zealand General Election
     DeniedUnder: 6(a)
 
   - ID: 51
     RequestDate: 2020 - 2021
-    Subject: Request relating to counter terrorism and the Royal Commission of
-Inquiry into the Terrorist Attack on Christchurch mosques
+    Subject: Request relating to counter terrorism and the Royal Commission of Inquiry into the Terrorist Attack on Christchurch mosques
     DeniedUnder: 6(a), 6(b)(i)
 
   - ID: 52
@@ -273,32 +271,27 @@ Inquiry into the Terrorist Attack on Christchurch mosques
 
   - ID: 54
     RequestDate: 2020 - 2021
-    Subject: Request for briefings relating to Cyber Ransom and strengthening
-NZ’s resilience to disinformation
+    Subject: Request for briefings relating to Cyber Ransom and strengthening NZ’s resilience to disinformation
     DeniedUnder: 6(a), 6(b)(i)
 
   - ID: 55
     RequestDate: 2020 - 2021
-    Subject: Request relating to ODESC governance boards and sub
-committees
+    Subject: Request relating to ODESC governance boards and sub committees
     DeniedUnder: 6(a)
 
   - ID: 56
     RequestDate: 2020 - 2021
-    Subject: Request relating to briefing papers prepared for the Prime Minister
-on the sources of a book
+    Subject: Request relating to briefing papers prepared for the Prime Minister on the sources of a book
     DeniedUnder: 6(a)
 
   - ID: 57
     RequestDate: 2020 - 2021
-    Subject: Request relating to documents on the governments COVID-19
-response in 2020
+    Subject: Request relating to documents on the governments COVID-19 response in 2020
     DeniedUnder: 6(a), 6(c)
 
   - ID: 58
     RequestDate: 2020 - 2021
-    Subject: Request for briefings and Cabinet papers relating to New Zealand’s
-involvement in Afghanistan
+    Subject: Request for briefings and Cabinet papers relating to New Zealand’s involvement in Afghanistan
     DeniedUnder: 6(a)
 
   - ID: 59
@@ -325,4 +318,4 @@ Sources:
     SourceTitle: FOIA Sections S6(a) and S(6)b(i) - Nov 2019 - Aug 2020
 
   - SourceURL: https://fyi.org.nz/request/16579-dpmc-oias-affected-by-section-6-aug-2020-aug-2021
-    SourceTitle: [DPMC] OIAs affected by Section 6 | Aug 2020 - Aug 2021
+    SourceTitle: \[DPMC] OIAs affected by Section 6 | Aug 2020 - Aug 2021
