Add progress for Four Thousand Weeks

--- a/data/books.yml
+++ b/data/books.yml
@@ -19,6 +19,15 @@
     date_finished: N/A
     rating: N/A
     progress: 24
+
+  - title: Four Thousand Weeks
+    subtitle: Time Management for Mortals
+    author: Oliver Burkeman
+    cover: https://covers.openlibrary.org/b/id/11990973-L.jpg
+    link: https://openlibrary.org/works/OL22355777W/Four_Thousand_Weeks
+    date_finished: N/A
+    rating: N/A
+    progress: 29
     
   - title: The Science of Cooking
     subtitle: Every Question Answered to Perfect your Cooking
