--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,9 +1,16 @@
+attrs==19.3.0
 beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2021.5.30
 chardet==4.0.0
+docopt==0.6.2
+gitdb==4.0.7
+GitPython==3.1.24
 idna==2.10
 Pillow==8.3.2
 requests==2.25.1
+smmap==4.0.0
 soupsieve==2.2.1
+specktre==0.3.0
+typing-extensions==3.10.0.2
 urllib3==1.26.5
