--- a/data/books.yml
+++ b/data/books.yml
@@ -19,15 +19,6 @@
     date_finished: N/A
     rating: N/A
     progress: 34
-
-  - title: Four Thousand Weeks
-    subtitle: Time Management for Mortals
-    author: Oliver Burkeman
-    cover: https://covers.openlibrary.org/b/id/11990973-L.jpg
-    link: https://openlibrary.org/works/OL22355777W/Four_Thousand_Weeks
-    date_finished: N/A
-    rating: N/A
-    progress: 74
     
   - title: The Science of Cooking
     subtitle: Every Question Answered to Perfect your Cooking
@@ -37,6 +28,15 @@
     date_finished: N/A
     rating: N/A
     progress: 27
+    
+  - title: Four Thousand Weeks
+    subtitle: Time Management for Mortals
+    author: Oliver Burkeman
+    cover: https://covers.openlibrary.org/b/id/11990973-L.jpg
+    link: https://openlibrary.org/works/OL22355777W/Four_Thousand_Weeks
+    date_finished: 2021-11-06
+    rating: 5
+    progress: 100
     
   - title: Crossing the Chasm, 3rd Edition
     subtitle: Marketing and Selling Disruptive Products to Mainstream Customers
