Add debug script showing images without alt text

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ resources
 .netlify
 data/fancylinks.json
 data/filesizes.json
+data/imagemetadata.json
 .pnpm-debug.log
 assets/css/style.css
 scripts/venv
