--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "dev:css": "NODE_ENV=development ./node_modules/tailwindcss/lib/cli.js -i ./assets/css/tailwind.css -o ./assets/css/style.css --jit -w",
     "build": "yarn run gather-files && yarn run build:css && COMMIT_SHA=$(git rev-parse --short HEAD) NODE_ENV=production hugo --gc",
     "build:css": "NODE_ENV=production ./node_modules/tailwindcss/lib/cli.js -i ./assets/css/tailwind.css -o ./assets/css/style.css --jit --minify",
-    "build:prod": "yarn run setup-python && yarn run gather-files && yarn run download-dotfiles && yarn run generate-fancy-links && yarn run build",
+    "build:prod": "yarn run setup-python && yarn run gather-files && yarn run download-dotfiles && yarn run generate-fancy-links && yarn run gather-image-metadata && yarn run build",
     "lint": "eslint assets/js",
     "setup-python": "pip install -U pip && pip install -r scripts/requirements.txt",
     "gather-files": "python scripts/gather-filesizes.py",
     "generate-fancy-links": "python scripts/generate-fancylinks.py",
-    "download-dotfiles": "python scripts/download-dotfiles.py"
+    "download-dotfiles": "python scripts/download-dotfiles.py",
+    "gather-image-metadata": "python scripts/gather-image-metadata.py"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
