--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
   "author": "Marcus Crane <marcus@utf9k.net>",
   "license": "MIT",
   "scripts": {
-    "start": "COMMIT_SHA=main overmind s",
-    "dev": "hugo server --disableFastRender",
-    "dev:css": "NODE_ENV=development ./node_modules/tailwindcss/lib/cli.js -i ./assets/css/tailwind.css -o ./assets/css/style.css --jit -w",
+    "start": "COMMIT_SHA=main hugo server --disableFastRender",
     "build": "yarn run gather-files && yarn run build:css && COMMIT_SHA=$(git rev-parse --short HEAD) NODE_ENV=production hugo --gc",
-    "build:css": "NODE_ENV=production ./node_modules/tailwindcss/lib/cli.js -i ./assets/css/tailwind.css -o ./assets/css/style.css --jit --minify",
     "build:prod": "yarn run setup-python && yarn run gather-files && yarn run download-dotfiles && yarn run generate-fancy-links && yarn run gather-image-metadata && yarn run build",
     "lint": "eslint assets/js",
     "setup-python": "pip install -U pip && pip install -r scripts/requirements.txt",
@@ -25,12 +22,9 @@
   "dependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.3.1",
     "node-fetch": "^2.6.1",
     "postcss": "^8.3.6",
-    "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.2.7"
+    "postcss-cli": "^8.3.1"
   }
 }
