--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "COMMIT_SHA=main hugo server --disableFastRender",
-    "build": "yarn run gather-files && yarn run build:css && COMMIT_SHA=$(git rev-parse --short HEAD) NODE_ENV=production hugo --gc",
+    "build": "COMMIT_SHA=$(git rev-parse --short HEAD) NODE_ENV=production hugo --gc",
     "build:prod": "yarn run setup-python && yarn run gather-files && yarn run download-dotfiles && yarn run generate-fancy-links && yarn run gather-image-metadata && yarn run build",
     "lint": "eslint assets/js",
     "setup-python": "pip install -U pip && pip install -r scripts/requirements.txt",
