--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,6 +2,6 @@
   "short_name": "utf9k",
   "name": "utf9k",
   "display": "standalone",
-  "background_color": "#a463f2",
-  "theme_color": "#a463f2"
+  "background_color": "#eaebe3",
+  "theme_color": "#eaebe3"
 }
