--- a/config.yaml
+++ b/config.yaml
@@ -84,6 +84,10 @@ outputs:
     - "PlainText"
 
 markup:
+  tableOfContents:
+    endLevel: 4
+    ordered: false
+    startLevel: 2
   goldmark:
     renderer:
       unsafe: true
