Add Ruined by Design to completed list

--- a/data/books.yml
+++ b/data/books.yml
@@ -33,9 +33,9 @@
     subtitle: How Designers Destroyed the World, and What We Can Do to Fix It
     cover: https://covers.openlibrary.org/b/id/11937903-L.jpg
     link: https://openlibrary.org/works/OL24994697W/Ruined_by_Design
-    date_finished: N/A
-    rating: N/A
-    progress: 39
+    date_finished: 2022-02-24
+    rating: 3
+    progress: 100
 
 - list: 2021
   goal: 20
