--- a/data/books.yml
+++ b/data/books.yml
@@ -2,32 +2,11 @@
   goal: 12
   books:
   
-  - title: How to Do Nothing
-    subtitle: Resisting the Attention Economy
-    author: Jenny Odell
-    cover: https://covers.openlibrary.org/b/id/10081711-L.jpg
-    link: https://openlibrary.org/works/OL20730900W/How_to_Do_Nothing
-    date_finished: N/A
-    rating: N/A
-    progress: 16
-
-  - title: How to Take Smart Notes
-    subtitle: One Simple Technique to Boost Writing, Learning and Thinking – for Students, Academics and Nonfiction Book Writers
-    author: Sönke Ahrens
-    cover: https://covers.openlibrary.org/b/id/8362230-L.jpg
-    link: https://openlibrary.org/works/OL18635700W/How_to_Take_Smart_Notes
-    date_finished: N/A
-    rating: N/A
-    progress: 34
-    
-  - title: The Science of Cooking
-    subtitle: Every Question Answered to Perfect your Cooking
-    author: Stuart Farrimond
-    cover: https://covers.openlibrary.org/b/id/11976269-L.jpg
-    link: https://openlibrary.org/works/OL19723027W/The_Science_of_Cooking
-    date_finished: N/A
-    rating: N/A
-    progress: 27
+  - title: Deep Work
+    subtitle: Rules for Focused Success in a Distracted World
+    cover: https://covers.openlibrary.org/b/id/8895559-L.jpg
+    link: https://openlibrary.org/works/OL17713267W/Deep_Work
+    progress: 10
 
   - title: Ruined by Design
     subtitle: How Designers Destroyed the World, and What We Can Do to Fix It
