--- a/data/games.yml
+++ b/data/games.yml
@@ -67,6 +67,13 @@
 - list: Completed
   games:
 
+  - title: "Call of Duty: Modern Warfare (2019)"
+    platform: "PC"
+    id: 119177
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co1rsg.png"
+    link: "https://www.igdb.com/games/call-of-duty-modern-warfare"
+    date_finished: 2022-06-13
+
   - title: "Phoenix Wright: Ace Attorney - Dual Destinies"
     platform: "Nintendo 3DS"
     id: 1432
