--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
     "test": "./ci/test.sh"
   },
   "devDependencies": {
-    "eslint": "7.32.0"
-  },
-  "dependencies": {
     "@babel/core": "7.18.2",
     "@babel/preset-env": "7.18.2",
     "autoprefixer": "10.4.7",
-    "littlefoot": "3.4.1",
-    "node-fetch": "2.6.7",
+    "eslint": "7.32.0",
     "postcss": "8.4.14",
     "postcss-cli": "8.3.1"
+  },
+  "dependencies": {
+    "littlefoot": "3.4.1"
   }
 }
