Update books and games list

--- a/data/books.yml
+++ b/data/books.yml
@@ -9,7 +9,16 @@
     link: https://openlibrary.org/works/OL27739453W/Build
     date_finished: null
     rating: null
-    progress: 10
+    progress: 36
+  
+  - title: Building a Second Brain
+    subtitle: A Proven Method to Organize Your Digital Life and Unlock Your Creative Potential
+    author: Tiago Forte
+    cover: https://covers.openlibrary.org/b/id/12372866-L.jpg
+    link: https://openlibrary.org/works/OL26417584W/Building_a_Second_Brain
+    date_finished: null
+    rating: null
+    progress: 16
 
   - title: High Output Management
     subtitle: null
@@ -18,7 +27,7 @@
     link: https://openlibrary.org/works/OL2355834W
     date_finished: null
     rating: null
-    progress: 25
+    progress: 40
   
   - title: Ruined by Design
     subtitle: How Designers Destroyed the World, and What We Can Do to Fix It
