--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@11ty/eleventy-plugin-rss": "^1.2.0"
   },
   "devDependencies": {
-    "bench": "^0.3.6"
+    "@mightyplow/eleventy-plugin-cache-buster": "^1.1.3",
+    "@types/markdown-it": "^12.2.3",
+    "bench": "^0.3.6",
+    "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.4"
   }
 }
