--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
   },
   "devDependencies": {
     "@11ty/eleventy-img": "^2.0.1",
+    "@jamshop/eleventy-plugin-esbuild": "^1.0.2",
     "@mightyplow/eleventy-plugin-cache-buster": "^1.1.3",
     "@types/markdown-it": "^12.2.3",
     "bench": "^0.3.6",
+    "littlefoot": "^3.4.1",
     "markdown-it": "^13.0.1",
-    "markdown-it-anchor": "^8.6.4"
+    "markdown-it-anchor": "^8.6.4",
+    "markdown-it-footnote": "^3.0.3",
+    "prettier": "^2.7.1"
   }
 }
