--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-footnote": "^3.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "yaml": "^2.1.1"
   }
 }
