Wire up homepage

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,5 @@
-.idea
-__pycache__
-*.pyc
 .DS_Store
-output
-public
-_site
-.jekyll-cache
+img
 node_modules
-resources
 .cache
-.netlify
-data/fancylinks.json
-data/filesizes.json
-data/imagemetadata.json
-.pnpm-debug.log
-scripts/venv
-venv
-dotfiles
-!content/dotfiles/.gitkeep
+_site
