--- a/.eleventyignore
+++ b/.eleventyignore
@@ -1,1 +1,13 @@
 README.md
+node_modules
+.eslintrc.js
+pnpm-lock.yaml
+package.json
+CITATION.cff
+netlify.toml
+LICENSE
+.editorconfig
+.gitignore
+.git
+.github
+validation
