--- a/package.json
+++ b/package.json
@@ -23,19 +23,18 @@
   },
   "homepage": "https://github.com/marcus-crane/utf9k#readme",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.1",
-    "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "luxon": "^3.0.1"
+    "@11ty/eleventy": "^1.0.1"
   },
   "devDependencies": {
     "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-img": "^2.0.1",
+    "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "@jamshop/eleventy-plugin-esbuild": "^1.0.2",
-    "@mightyplow/eleventy-plugin-cache-buster": "^1.1.3",
     "@types/markdown-it": "^12.2.3",
     "bench": "^0.3.6",
     "littlefoot": "^3.4.1",
+    "luxon": "^3.0.1",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-footnote": "^3.0.3",
