--- a/package.json
+++ b/package.json
@@ -27,16 +27,18 @@
   },
   "devDependencies": {
     "@11ty/eleventy-fetch": "^3.0.0",
-    "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "@jamshop/eleventy-plugin-esbuild": "^1.0.2",
     "@types/markdown-it": "^12.2.3",
+    "@types/markdown-it-attrs": "^4.1.0",
     "bench": "^0.3.6",
     "littlefoot": "^3.4.1",
     "luxon": "^3.0.1",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.4",
+    "markdown-it-attrs": "^4.1.4",
+    "markdown-it-eleventy-img": "^0.6.0",
     "markdown-it-footnote": "^3.0.3",
     "prettier": "^2.7.1",
     "yaml": "^2.1.1"
