--- a/data/books.yml
+++ b/data/books.yml
@@ -28,6 +28,15 @@
     date_finished: null
     rating: null
     progress: 40
+    
+  - title: Slow Horses
+    subtitle: null
+    author: Mick Herron
+    cover: https://covers.openlibrary.org/b/id/12861756-L.jpg
+    link: https://openlibrary.org/works/OL18630860W
+    date_finished:
+    rating: null
+    progress: 48
   
   - title: Ruined by Design
     subtitle: How Designers Destroyed the World, and What We Can Do to Fix It
