--- a/data/books.yml
+++ b/data/books.yml
@@ -34,7 +34,7 @@
     author: Mick Herron
     cover: https://covers.openlibrary.org/b/id/12861756-L.jpg
     link: https://openlibrary.org/works/OL18630860W
-    date_finished:
+    date_finished: null
     rating: null
     progress: 48
   
