--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "_site"
-command = "npm install -g pnpm && pnpm install && pnpm run build"
+command = "npm install -g pnpm && pnpm install && pnpm build"
 
 [[redirects]]
 	from = "/statistician.js"
