--- a/_data/games.yml
+++ b/_data/games.yml
@@ -1,11 +1,17 @@
 - list: Actively playing
   games:
-
-  - title: "Grand Theft Auto V"
+  
+  - title: "Digimon Story: Cyber Sleuth"
+    platform: "Nintendo Switch"
+    id: 15705
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co2px6.jpg"
+    link: "https://www.igdb.com/games/digimon-story-cyber-sleuth"
+  
+  - title: "Final Fantasy XIV: A Realm Reborn"
     platform: "PC"
-    id: 1020
-    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co2lbd.png"
-    link: "https://www.igdb.com/games/grand-theft-auto-v"
+    id: 386
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co30fd.jpg"
+    link: "https://www.igdb.com/games/final-fantasy-xiv-online--1"
 
 - list: Stalled but occasionally progress is made
   games:
@@ -33,6 +39,12 @@
     id: 4127
     cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co2w84.jpg"
     link: "https://www.igdb.com/games/grandia"
+
+  - title: "Grand Theft Auto V"
+    platform: "PC"
+    id: 1020
+    cover: "https://images.igdb.com/igdb/image/upload/t_cover_big/co2lbd.png"
+    link: "https://www.igdb.com/games/grand-theft-auto-v"
 
   - title: "NieR Replicant ver.1.22474487139..."
     platform: "Playstation 5"
