--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/marcus-crane/utf9k#readme",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.1"
+    "@11ty/eleventy": "^1.0.1",
+    "eleventy-plugin-time-to-read": "^1.2.0"
   },
   "devDependencies": {
     "@11ty/eleventy-fetch": "^3.0.0",
