Completed Slow Horses

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -34,9 +34,9 @@
     author: Mick Herron
     cover: https://covers.openlibrary.org/b/id/12861756-L.jpg
     link: https://openlibrary.org/works/OL18630860W
-    date_finished: null
-    rating: null
-    progress: 48
+    date_finished: 2022-09-18 
+    rating: 4
+    progress: 100
 
   - title: Ruined by Design
     subtitle: How Designers Destroyed the World, and What We Can Do to Fix It
