--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
 publish = "_site"
 command = "npm install -g pnpm && pnpm install && pnpm build"
-environment = { NODE_ENV = "production" }
+environment = { NODE_ENV = "production", NPM_FLAGS = "--force" }
 
 [[redirects]]
 	from = "/statistician.js"
