--- a/package.json
+++ b/package.json
@@ -43,5 +43,6 @@
     "markdown-it-footnote": "^3.0.3",
     "prettier": "^2.7.1",
     "yaml": "^2.1.1"
-  }
+  },
+  "packageManager": "yarn@3.2.3"
 }
