--- a/.eleventyignore
+++ b/.eleventyignore
@@ -1,8 +1,8 @@
 README.md
 node_modules
 .eslintrc.js
-pnpm-lock.yaml
 package.json
+yarn.lock
 CITATION.cff
 netlify.toml
 LICENSE
@@ -11,4 +11,3 @@ LICENSE
 .git
 .github
 validation
-blog/2021-04-27-dropbox-is-way-too-clingy.md
